Atualizar o index.html

--- a/CrudProva/front/pages/index.html
+++ b/CrudProva/front/pages/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>📚 Catálogo de Livros</title>
+  <title> Catálogo de Livros</title>
   <link rel="stylesheet" href="../assents/CSS/style.css" />
 </head>
 <body>
   <header class="header">
-    <h1>📚 Catálogo de Livros</h1>
+    <h1> Catálogo de Livros</h1>
     <nav class="tabs">
       <button id="tab-bib" class="tab active">Bibliotecários</button>
       <button id="tab-livro" class="tab">Livros</button>
